--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "start": "node src/index.js",
     "dev": "NODE_ENV=development node src/index.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^17.2.2"
+  },
   "engines": {
     "node": ">=18"
   }
